examples/test/testpolicy646.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy646
  namespace: namespace290
spec:
  podSelector:
    matchLabels:
      key25: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value42
          key35: value7
          key23: value2
      podSelector:
        matchLabels:
          key7: value5
          key21: value26
